# not-this-but-that

./: .env.example  .gitignore  AGENTS.md  HANDOVER.md  LICENSE  README.md  pre_registration.yaml  pyproject.toml
bloom/: README.md  neograph-perspective.json
cypher/: 00_constraints.cypher  01_indexes.cypher
data/: D1_contrast_pairs.jsonl  D2_neutral_prompts.json  D2b_confirmation_prompts.json  D3_fluency.txt  README.md  classifier_blind_labels.jsonl  classifier_blind_labels_enriched.jsonl  classifier_blind_set.jsonl  classifier_blind_set_enriched.jsonl  classifier_validation.jsonl  labels_cache.json
reports/: ancient_origin_research.md  asymptote_ladder.json  asymptote_ladder_L12.json  asymptote_ladder_L25.json  asymptote_ladder_n200.json  collateral_syntax.json  collateral_syntax.md  confirmation_prereg.json  confirmation_prereg.md  confirmation_run.json  confirmation_run.md  d1_validation.md  demo_architecture.md  demo_gallery.json  demo_gallery.md  gauntlet_union_rescore.json  heldout_reslice.json  heldout_reslice.md  joint_ablation.json  joint_ablation.md  linkedin_post.md  llm_judge_manifest.json  llm_judge_rescore.json  llm_judge_rescore.md  m1_eval_top25.json  m1_rescore_union.json  m1_stats_reanalysis.json  m1_stats_reanalysis.md  matched_activation_null.json  medium_post_draft.md  medium_post_draft.v1.md  operating_protocol.md  path_b_register_writeup.md  permissive_fix_audit.json  permissive_fix_audit.md  phase1_classifier_eval.json  phase1_classifier_eval.md  phase2_baseline.json  phase2_baseline.md  phase2_generations_gemma_2b.jsonl  (+47 more)
scripts/: 00_bootstrap_neo4j.sh  01_load_model_and_sae.py  04_ingest_features.py  PROBE_README.md  audit_permissive_fix.py  bake_attribution_static.py  bake_demo_examples.py  build_demo_layout.py  build_label_embeddings.py  probe.py  (+49 more)
(+109 files in other folders)
