[project]
name = "not-this-but-that"
version = "0.2.0"
description = "Mechanism and control of the 'not X, but Y' construction in one open LLM (Gemma 2 2B). SAE feature discovery, bidirectional causal validation, quality-preserved de-slop. Reuses the neograph substrate from the grammar-layer project."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Theo Hopkinson" }]
urls = { Homepage = "https://github.com/ho3h/grammar-layer" }
dependencies = [
    "torch>=2.4",
    "transformer-lens>=2.0",
    "sae-lens>=4.4",
    "transformers>=4.44",
    "accelerate>=0.34",
    "neo4j>=5.27",
    "httpx>=0.28",
    "tenacity>=9.0",
    "sentence-transformers>=3.2",
    "umap-learn>=0.5.6",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "numpy>=1.26,<2.3",
    "pandas>=2.2",
    "pyarrow>=18",
    "datasets>=3.0",
    "zstandard>=0.23",
    "tqdm>=4.66",
    "rich>=13.9",
    "anthropic>=0.40",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.26",
    "spacy>=3.8.14",
    "openai-harmony>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "ipykernel>=6",
    "jupyter>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/neograph",
    "src/classifier",
    "src/steering",
    "src/quality",
    "src/genealogy",
    "src/deslop",
    "src/firewall",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
